updated index to fix assets link

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <script>
         // --- DATA: The heart of the portfolio ---
 
-        const ASSET_BASE = "../assets";
+        const ASSET_BASE = "assets";
         const PDF_DIR = `${ASSET_BASE}/pdfs`;
         const IMG_DIR = `${ASSET_BASE}/images`;
 
