slight visual improvements; color logos/no tags visible under the article cards

--- a/index.html
+++ b/index.html
@@ -109,22 +109,22 @@
             </h2>
             <div class="grid grid-cols-2 gap-y-10 gap-x-8 md:grid-cols-6 items-center">
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto filter grayscale hover:grayscale-0 transition duration-300 ease-in-out opacity-70 hover:opacity-100" src="https://logo.clearbit.com/mastercard.com" alt="Mastercard">
+                    <img class="h-20 w-auto" src="https://logo.clearbit.com/mastercard.com" alt="Mastercard">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto filter grayscale hover:grayscale-0 transition duration-300 ease-in-out opacity-70 hover:opacity-100" src="https://logo.clearbit.com/americanexpress.com" alt="American Express">
+                    <img class="h-20 w-auto" src="https://logo.clearbit.com/americanexpress.com" alt="American Express">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto filter grayscale hover:grayscale-0 transition duration-300 ease-in-out opacity-70 hover:opacity-100" src="https://logo.clearbit.com/discover.com" alt="Discover">
+                    <img class="h-20 w-auto" src="https://logo.clearbit.com/discover.com" alt="Discover">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto filter grayscale hover:grayscale-0 transition duration-300 ease-in-out opacity-70 hover:opacity-100" src="https://logo.clearbit.com/ncr.com" alt="NCR">
+                    <img class="h-20 w-auto" src="https://logo.clearbit.com/ncr.com" alt="NCR">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto filter grayscale hover:grayscale-0 transition duration-300 ease-in-out opacity-70 hover:opacity-100" src="https://logo.clearbit.com/worldpay.com" alt="Worldpay">
+                    <img class="h-20 w-auto" src="https://logo.clearbit.com/worldpay.com" alt="Worldpay">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto filter grayscale hover:grayscale-0 transition duration-300 ease-in-out opacity-70 hover:opacity-100" src="https://logo.clearbit.com/forter.com" alt="Forter">
+                    <img class="h-20 w-auto" src="https://logo.clearbit.com/forter.com" alt="Forter">
                 </div>
             </div>
         </section>
