--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
         #portfolio-grid {
             transition: opacity 200ms ease-in-out;
         }
+        .read-more-btn {
+            display: inline-block;
+            background-color: #007bff;
+            color: white;
+            padding: 0.75rem 1.5rem;
+            font-size: 1rem;
+            font-weight: 600;
+            border-radius: 0.25rem;
+            box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+            transition: all 0.2s ease-in-out;
+            text-decoration: none;
+        }
+
+        .read-more-btn:hover {
+            background-color: #0056b3;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            transform: translateY(-1px);
+        }
     </style>
 </head>
 <body class="antialiased">
