--- a/index.html
+++ b/index.html
@@ -272,6 +272,21 @@
         </div>
     </div>
 
+    <!-- PDF Modal -->
+    <div id="pdf-modal" class="modal fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4 opacity-0 pointer-events-none">
+        <div class="modal-content bg-white w-full h-full max-w-4xl rounded-xl shadow-2xl flex flex-col">
+            <div class="flex justify-between items-center p-4 border-b border-gray-200">
+                <h2 id="pdf-title" class="text-2xl font-bold text-gray-800"></h2>
+                <button onclick="closeModal('pdf-modal')" class="text-gray-500 hover:text-gray-800">
+                    <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+                </button>
+            </div>
+            <div class="flex-grow p-2 bg-gray-100">
+                <iframe id="pdf-viewer" src="" class="w-full h-full" frameborder="0"></iframe>
+            </div>
+        </div>
+    </div>
+
 
     <script src="articles.js"></script>
     <script src="app.js"></script>
