--- a/index.html
+++ b/index.html
@@ -210,13 +210,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex justify-between items-center pt-4 mt-4 border-t border-gray-200">
-                        <button id="clear-all-filters-btn" class="text-gray-600 hover:text-blue-600 font-semibold py-2 px-4 underline">
-                            Clear All Filters
-                        </button>
-                        <button id="close-filter-btn" class="text-gray-400 hover:text-gray-600 transition-colors" aria-label="Close filter panel">
-                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-                        </button>
+                    <div id="filter-panel-footer" class="pt-4 mt-4 border-t border-gray-200 space-y-4">
+                        <div id="apply-btn-container" class="hidden flex justify-end">
+                            <button id="apply-filters-btn" class="bg-blue-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-blue-700 transition-colors shadow-md">Apply Filters</button>
+                        </div>
+                        <div class="flex justify-between items-center">
+                            <button id="clear-all-filters-btn" class="text-gray-600 hover:text-blue-600 font-semibold py-2 px-4 underline">
+                                Clear All Filters
+                            </button>
+                            <button id="close-filter-btn" class="text-gray-400 hover:text-gray-600 transition-colors" aria-label="Close filter panel">
+                                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
