refactored to add css file

--- a/index.html
+++ b/index.html
@@ -9,113 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Lora:wght@700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif; /* A modern, highly readable sans-serif for body text */
-            background-color: #f8f9fa;
-            color: #343a40;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-        h1, h2, h3, h4 { /* Using a refined serif for all heading levels */
-            font-family: 'Lora', serif;
-            letter-spacing: -0.02em; /* Tightens up spacing for a more professional look */
-        }
-        h1 {
-            letter-spacing: -0.03em; /* Even tighter for the main title */
-        }
-        .leading-relaxed {
-            line-height: 1.7; /* Increasing line height for better readability of long text blocks */
-        }
-        .tag {
-            transition: all 0.2s ease-in-out;
-        }
-        .tag:hover {
-            transform: translateY(-2px);
-        }
-        .active-tag {
-            background-color: #0056b3 !important;
-            color: white !important;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        .modal {
-            transition: opacity 0.25s ease;
-        }
-        .modal-content {
-            transition: transform 0.25s ease;
-        }
-        .card-image {
-            height: 200px;
-            object-fit: cover;
-        }
-        /* Custom styles for the dropdown */
-        summary {
-            list-style: none; /* Removes default marker */
-            cursor: pointer;
-        }
-        summary::-webkit-details-marker {
-            display: none; /* For Safari */
-        }
-        .chevron {
-            transition: transform 0.2s ease-in-out;
-        }
-        details[open] .chevron {
-            transform: rotate(90deg);
-        }
-        .is-sticky {
-            /* This class now acts as a JS hook. The container itself is transparent. */
-        }
-        .is-sticky #filter-toggle-btn {
-            background-color: #f8f9fa;
-            padding-left: 1.5rem;
-            padding-right: 1.5rem;
-            padding-top: 0.75rem;
-            padding-bottom: 0.75rem;
-            border-radius: 9999px; /* rounded-full */
-            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); /* shadow-lg */
-            border: 1px solid #e5e7eb; /* border-gray-200 */
-            transition: all 0.2s ease-in-out;
-        }
-        #portfolio-grid {
-            transition: opacity 200ms ease-in-out;
-        }
-        .read-more-btn {
-            display: inline-block;
-            background-color: #007bff;
-            color: white;
-            padding: 0.75rem 1.5rem;
-            font-size: 1rem;
-            font-weight: 600;
-            border-radius: 0.25rem;
-            box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-            transition: all 0.2s ease-in-out;
-            text-decoration: none;
-        }
-
-        .read-more-btn:hover {
-            background-color: #0056b3;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-            transform: translateY(-1px);
-        }
-
-        .filter-btn {
-            transition: all 0.2s ease-in-out;
-        }
-
-        .filter-btn:hover {
-            transform: translateY(-2px);
-            text-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .clear-filters-btn {
-            transition: all 0.2s ease-in-out;
-        }
-
-        .clear-filters-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="antialiased">
 
