--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p class="text-gray-700 leading-relaxed mb-4">
                 I am a writer and analyst specializing in the complex intersections of finance, technology, and business. My work transforms intricate technical information into clear, insightful analysis for executive and industry audiences. I excel at finding the narrative within the data, providing strategic insights that help businesses navigate the evolving digital landscape.
             </p>
-            <button onclick="openModal('colophon-modal')" class="text-blue-600 hover:text-blue-800 font-semibold">
+            <button onclick="openModal('colophon-modal')" class="text-gray-700 hover:text-gray-800 font-semibold">
                 Learn how this site was built &rarr;
             </button>
         </section>
@@ -60,72 +60,75 @@
         </section>
 
 
-        <!-- Portfolio Grid Section -->
-        <main>
-            <h2 id="portfolio-heading" class="text-4xl font-bold text-center text-gray-800 mb-8">All Work</h2>
+                <!-- Portfolio Grid Section -->
+        <div class="work-articles-container">
+            <main>
+                <h2 id="portfolio-heading" class="text-4xl font-bold text-center text-gray-800 mb-8">All Work</h2>
 
-            <!-- Filtering Section -->
-            <div class="max-w-4xl mx-auto mb-12 relative sticky top-0 z-30 py-4">
-                <!-- Filter Toggle Button -->
-                <div class="text-center flex justify-center items-center space-x-4">
-                    <button id="filter-toggle-btn" aria-expanded="false" class="filter-btn inline-flex items-center text-2xl font-bold text-gray-800 hover:text-blue-600 group transition-colors duration-200">
-                        Filter
-                        <svg id="filter-chevron" class="w-5 h-5 ml-2 text-gray-500 transition-transform duration-300 group-hover:text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-                    </button>
-                    <!-- Clear Active Filters Button -->
-                    <div id="active-filters-container" class="hidden">
-                        <button id="clear-active-filters-btn" class="clear-filters-btn bg-red-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-red-600 transition-colors shadow-md">
-                            Clear All Filters
-                        </button>
+                <!-- Filtering Section -->
+                <div class="max-w-4xl mx-auto mb-12 relative sticky top-0 z-30 py-4">
+                    <div class="flex justify-end">
+                        <!-- Filter Toggle Button -->
+                        <div class="text-center flex justify-center items-center space-x-4">
+                            <button id="filter-toggle-btn" aria-expanded="false" class="filter-btn inline-flex items-center text-2xl font-bold text-gray-800 hover:text-gray-700 group transition-colors duration-200">
+                                Filter
+                                <svg id="filter-chevron" class="w-5 h-5 ml-2 text-gray-500 transition-transform duration-300 group-hover:text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                            </button>
+                            <!-- Clear Active Filters Button -->
+                            <div id="active-filters-container" class="hidden">
+                                <button id="clear-active-filters-btn" class="clear-filters-btn bg-red-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-red-600 transition-colors shadow-md">
+                                    Clear All Filters
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Filter Panel (Initially Hidden) -->
+                    <div id="filter-panel" class="absolute w-full mt-4 bg-white rounded-xl shadow-2xl p-6 z-20 transform transition-all duration-300 origin-top opacity-0 scale-95 pointer-events-none left-1/2 -translate-x-1/2 max-w-4xl">
+                        <div class="flex flex-col space-y-6">
+                            <!-- Genre Filters -->
+                            <div>
+                                <div class="flex justify-between items-center mb-3">
+                                    <h4 class="text-lg font-semibold text-gray-700">By Genre</h4>
+                                    <button id="clear-genre-filter" class="text-sm text-gray-500 hover:text-gray-700 underline">Clear</button>
+                                </div>
+                                <div id="genre-filters" class="flex flex-wrap gap-2">
+                                    <!-- Genre filter buttons will be dynamically inserted here -->
+                                </div>
+                            </div>
+                            <!-- Topic Filters -->
+                            <div>
+                                <div class="flex justify-between items-center mb-3">
+                                    <h4 class="text-lg font-semibold text-gray-700">By Topic</h4>
+                                    <button id="clear-topic-filter" class="text-sm text-gray-500 hover:text-gray-700 underline">Clear</button>
+                                </div>
+                                <div id="tag-filters" class="flex flex-wrap gap-2">
+                                    <!-- Topic filter buttons will be dynamically inserted here -->
+                                </div>
+                            </div>
+                        </div>
+                        <div id="filter-panel-footer" class="pt-4 mt-4 border-t border-gray-200 space-y-4">
+                            <div id="apply-btn-container" class="hidden flex justify-end">
+                                <button id="apply-filters-btn" class="bg-gray-700 text-white font-bold py-2 px-6 rounded-lg hover:bg-gray-800 transition-colors shadow-md">Apply Filters</button>
+                            </div>
+                            <div class="flex justify-between items-center">
+                                <button id="clear-all-filters-btn" class="text-gray-600 hover:text-gray-700 font-semibold py-2 px-4 underline">
+                                    Clear All Filters
+                                </button>
+                                <button id="close-filter-btn" class="text-gray-400 hover:text-gray-600 transition-colors" aria-label="Close filter panel">
+                                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <!-- Filter Panel (Initially Hidden) -->
-                <div id="filter-panel" class="absolute w-full mt-4 bg-white rounded-xl shadow-2xl p-6 z-20 transform transition-all duration-300 origin-top opacity-0 scale-95 pointer-events-none">
-                    <div class="flex flex-col space-y-6">
-                        <!-- Topic Filters -->
-                        <div>
-                            <div class="flex justify-between items-center mb-3">
-                                <h4 class="text-lg font-semibold text-gray-700">By Topic</h4>
-                                <button id="clear-topic-filter" class="text-sm text-gray-500 hover:text-blue-600 underline">Clear</button>
-                            </div>
-                            <div id="tag-filters" class="flex flex-wrap gap-2">
-                                <!-- Topic filter buttons will be dynamically inserted here -->
-                            </div>
-                        </div>
-                        <!-- Genre Filters -->
-                        <div>
-                            <div class="flex justify-between items-center mb-3">
-                                <h4 class="text-lg font-semibold text-gray-700">By Genre</h4>
-                                <button id="clear-genre-filter" class="text-sm text-gray-500 hover:text-blue-600 underline">Clear</button>
-                            </div>
-                            <div id="genre-filters" class="flex flex-wrap gap-2">
-                                <!-- Genre filter buttons will be dynamically inserted here -->
-                            </div>
-                        </div>
-                    </div>
-                    <div id="filter-panel-footer" class="pt-4 mt-4 border-t border-gray-200 space-y-4">
-                        <div id="apply-btn-container" class="hidden flex justify-end">
-                            <button id="apply-filters-btn" class="bg-blue-600 text-white font-bold py-2 px-6 rounded-lg hover:bg-blue-700 transition-colors shadow-md">Apply Filters</button>
-                        </div>
-                        <div class="flex justify-between items-center">
-                            <button id="clear-all-filters-btn" class="text-gray-600 hover:text-blue-600 font-semibold py-2 px-4 underline">
-                                Clear All Filters
-                            </button>
-                            <button id="close-filter-btn" class="text-gray-400 hover:text-gray-600 transition-colors" aria-label="Close filter panel">
-                                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-                            </button>
-                        </div>
-                    </div>
+                <div id="portfolio-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <!-- Article cards will be dynamically inserted here -->
                 </div>
-            </div>
-
-            <div id="portfolio-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Article cards will be dynamically inserted here -->
-            </div>
             <div id="pagination-controls" class="text-center mt-12 space-x-4">
-                <button id="see-more-btn" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors shadow-md text-lg">See More</button>
-                <button id="see-less-btn" class="bg-gray-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-gray-700 transition-colors shadow-md text-lg hidden">See Less</button>
+                <button id="see-more-btn" class="bg-gray-700 text-white font-bold py-3 px-6 rounded-lg hover:bg-gray-800 transition-colors shadow-md text-lg">See More</button>
+                <button id="see-less-btn" class="bg-gray-700 text-white font-bold py-3 px-6 rounded-lg hover:bg-gray-800 transition-colors shadow-md text-lg hidden">See Less</button>
             </div>
             <p id="no-results" class="text-center text-gray-500 text-lg hidden">No articles found matching your criteria.</p>
         </main>
@@ -138,7 +141,7 @@
     </div>
 
     <!-- Back to Top Button -->
-    <button id="back-to-top-btn" class="fixed bottom-8 right-8 bg-blue-600 text-white p-3 rounded-full shadow-lg hover:bg-blue-700 transition-opacity duration-300 opacity-0 pointer-events-none z-50">
+    <button id="back-to-top-btn" class="fixed bottom-8 right-8 bg-gray-700 text-white p-3 rounded-full shadow-lg hover:bg-gray-800 transition-opacity duration-300 opacity-0 pointer-events-none z-50">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"></path></svg>
     </button>
 
