--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             </h2>
             <div class="grid grid-cols-2 gap-y-10 gap-x-8 md:grid-cols-6 items-center">
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto" src="https://logo.clearbit.com/mastercard.com" alt="Mastercard">
+                    <img class="h-20 w-auto" src="assets/images/logos/mastercard-logo.png" alt="Mastercard">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto" src="https://logo.clearbit.com/americanexpress.com" alt="American Express">
+                    <img class="h-20 w-auto" src="assets/images/logos/amex-logo.png" alt="American Express">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto" src="https://logo.clearbit.com/discover.com" alt="Discover">
+                    <img class="h-20 w-auto" src="assets/images/logos/discover-logo.png" alt="Discover">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto" src="https://logo.clearbit.com/ncr.com" alt="NCR">
+                    <img class="h-20 w-auto" src="assets/images/logos/ncr-logo.png" alt="NCR">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto" src="https://logo.clearbit.com/worldpay.com" alt="Worldpay">
+                    <img class="h-20 w-auto" src="assets/images/logos/fis-logo.png" alt="Worldpay (Placeholder)">
                 </div>
                 <div class="col-span-1 flex justify-center">
-                    <img class="h-20 w-auto" src="https://logo.clearbit.com/forter.com" alt="Forter">
+                    <img class="h-20 w-auto" src="assets/images/logos/forter-logo.png" alt="Forter">
                 </div>
             </div>
         </section>
