divider between filter options

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                                     <!-- Genre filter buttons will be dynamically inserted here -->
                                 </div>
                             </div>
+                            <hr class="my-6 border-gray-200">
                             <!-- Topic Filters -->
                             <div>
                                 <div class="flex justify-between items-center mb-3">
