added links to the research landing pages

--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
                     </div>
                 </div>
 
+                <div id="research-warning" class="hidden bg-red-100 border-l-4 border-red-500 text-red-700 p-4 mb-8 rounded-md shadow-md">
+                    <p class="font-bold">Authorial Note:</p>
+                    <p>While senior analysts are credited, I was the sole author of these reports (effectively ghostwriting on their behalf). Full versions are behind a paywall.</p>
+                </div>
+
                 <div id="portfolio-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Article cards will be dynamically inserted here -->
                 </div>
