--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@
 
                 <div id="research-warning" class="hidden bg-red-100 border-l-4 border-red-500 text-red-700 p-4 mb-8 rounded-md shadow-md">
                     <p class="font-bold">Authorial Note:</p>
-                    <p>While senior analysts are credited, I was the sole author of these reports (effectively ghostwriting on their behalf). Full versions are behind a paywall.</p>
+                    <p>While senior analysts are credited, I was the sole author of these reports (effectively ghostwriting on their behalf). Full versions are behind a paywall. 'Read More' takes you to a PDF of the public landing page. To view the official landing pages, please visit the links below:</p>
+                    <ul class="list-disc list-inside mt-2">
+                        <li><a href="https://javelinstrategy.com/research/2021-credit-card-data-book-part-one-internal-dynamics" target="_blank" class="underline">Credit Report</a></li>
+                        <li><a href="https://javelinstrategy.com/research/b2b-e-commerce-challenges-and-opportunities-caused-digital-acceleration" target="_blank" class="underline">B2B Marketplace Report</a></li>
+                    </ul>
                 </div>
 
                 <div id="portfolio-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
