--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
 
     </div>
 
+    <!-- Contact Me Button -->
+    <div id="contact-container" class="fixed bottom-8 left-8 z-50">
+        <button id="contact-btn" class="bg-gray-700 text-white py-3 px-5 rounded-full shadow-lg hover:bg-gray-800 transition-all duration-300 flex items-center space-x-2 transform hover:scale-105">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+            <span>Contact Me</span>
+        </button>
+        <div id="email-info" class="hidden absolute bottom-full left-0 w-max mb-2 bg-white p-3 rounded-lg shadow-lg border border-gray-200">
+            <p class="text-gray-800 font-semibold">danielbanta123@gmail.com</p>
+        </div>
+    </div>
+
     <!-- Back to Top Button -->
     <button id="back-to-top-btn" class="fixed bottom-8 right-8 bg-gray-700 text-white p-3 rounded-full shadow-lg hover:bg-gray-800 transition-opacity duration-300 opacity-0 pointer-events-none z-50">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"></path></svg>
