--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                     </div>
 
                     <!-- Filter Panel (Initially Hidden) -->
-                    <div id="filter-panel" class="absolute w-full mt-4 bg-white rounded-xl shadow-2xl p-6 z-20 transform transition-all duration-300 origin-top opacity-0 scale-95 pointer-events-none left-1/2 -translate-x-1/2 max-w-4xl">
+                    <div id="filter-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 opacity-0 pointer-events-none transition-opacity duration-300"></div>
+                    <div id="filter-panel" class="absolute w-full mt-4 bg-white rounded-xl shadow-2xl p-6 z-50 transform transition-all duration-300 origin-top opacity-0 scale-95 pointer-events-none left-1/2 -translate-x-1/2 max-w-4xl">
                         <div class="flex flex-col space-y-6">
                             <!-- Genre Filters -->
                             <div>
