text changes to the research note

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
 
                 <div id="research-warning" class="hidden bg-red-100 border-l-4 border-red-500 text-red-700 p-4 mb-8 rounded-md shadow-md">
-                    <p class="font-bold">Authorial Note:</p>
+                    <p class="font-bold">Please Note:</p>
                     <p>Mercator was acquired by Escalent (the parent company of Javelin) after I left. And although senior analysts are credited, I was the sole author of these reports (effectively ghostwriting on their behalf). Full versions are behind a paywall. 'Read More' takes you to a PDF of the public landing page. To view the official landing pages, please visit the links below:</p>
                     <ul class="list-disc list-inside mt-2">
                         <li><a href="https://javelinstrategy.com/research/2021-credit-card-data-book-part-one-internal-dynamics" target="_blank" class="underline">Credit Report</a></li>
