changed blurb on website design process

--- a/index.html
+++ b/index.html
@@ -184,15 +184,15 @@
                     <h3 class="text-xl font-semibold mb-2 text-gray-800">Technology Stack</h3>
                     <ul class="list-disc list-inside space-y-1">
                         <li><span class="font-semibold">Framework:</span> Vanilla HTML, CSS, and JavaScript, styled with Tailwind CSS.</li>
-                        <li><span class="font-semibold">Hosting:</span> Designed for deployment on a modern platform like Netlify or Vercel.</li>
+                        <li><span class="font-semibold">Hosting:</span> Designed for deployment for free on Github Pages.</li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold mb-2 text-gray-800">AI-Assisted Development Log</h3>
-                    <p>I believe in leveraging AI as a powerful collaborator. This project was built using a "human-in-the-loop" approach, where I directed AI tools to accelerate development and then refined the output.</p>
+                    <p>I believe in leveraging AI as a powerful collaborator. This project was built using a "human-in-the-loop" approach, where I directed AI tools to create a fully functional website with modern functionality, despite lacking a background in coding and web development.</p>
                     <ul class="list-disc list-inside space-y-2 mt-4 bg-gray-50 p-4 rounded-lg">
                         <li><span class="font-semibold">Task:</span> Data structuring & summarization. I prompted an LLM to extract metadata and generate initial summaries from my PDFs, which I then edited for voice and accuracy.</li>
-                        <li><span class="font-semibold">Task:</span> Code generation. I described the desired design and filtering logic in plain English and had an AI generate the boilerplate code, which I then integrated and customized.</li>
+                        <li><span class="font-semibold">Task:</span> Code generation. I described the desired design and filtering logic in plain English and had an AI generate the boilerplate code, which I then integrated, iterated on, and customized as needed.</li>
                     </ul>
                 </div>
                 <p class="pt-4 border-t border-gray-200">This transparent process showcases a modern workflow that combines human expertise with machine efficiency.</p>
