implementing company-specific article selection

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <!-- Portfolio Grid Section -->
         <div class="work-articles-container">
             <main>
-                <h2 id="portfolio-heading" class="text-4xl font-bold text-center text-gray-800 mb-8">All Work</h2>
+                <h2 id="portfolio-heading" class="text-4xl font-bold text-center text-gray-800 mb-8">Featured Work</h2>
 
                 <!-- Filtering Section -->
                 <div class="max-w-4xl mx-auto mb-12 relative sticky top-0 z-30 py-4">
