idk again fuck github

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                             <!-- Clear Active Filters Button -->
                             <div id="active-filters-container" class="hidden">
                                 <button id="clear-active-filters-btn" class="clear-filters-btn bg-red-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-red-600 transition-colors shadow-md">
+                                <button id="clear-active-filters-btn" class="clear-filters-btn bg-red-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-red-600 transition-colors shadow-md border border-gray-800">
                                     Clear All Filters
                                 </button>
                             </div>
